fixes readme